# Spicer-Assets-Tracking-app-

./: README.md  build.gradle  settings.gradle
ModuleAPI/: android.keystore  build.gradle  proguard-rules.pro
ModuleAPI/src/main/java/com/xlzn/hcpda/: DeviceConfigManage.java  ModuleAPI.java  SerialPort.java
ModuleAPI/src/main/java/com/xlzn/hcpda/jxl/: FileImport.java  FileXls.java
ModuleAPI/src/main/java/com/xlzn/hcpda/uhf/: UHFReader.java
ModuleAPI/src/main/java/com/xlzn/hcpda/utils/: CRCUtils.java  DataConverter.java  LoggerUtils.java
ModuleAPI/src/main/jni/: CMakeLists.txt
ModuleAPI/src/main/jni/inc/: Logger.h  ModuleAPI.h  SerialPort.h
ModuleAPI/src/main/jni/src/: Logger.c  ModuleAPI.c  SerialPort.c
gradle/wrapper/: gradle-wrapper.properties
uhfDemo/: build.gradle
uhfDemo/debug/: output-metadata.json
uhfDemo/src/androidTest/java/com/xlzn/hcpda/uhf/: ExampleInstrumentedTest.java
uhfDemo/src/main/: AndroidManifest.xml
uhfDemo/src/main/res/drawable/: rounded_button.xml
uhfDemo/src/main/res/layout/: activity_add_tag.xml  activity_category_selection.xml  activity_delete_tag.xml  activity_homepage.xml  activity_main.xml  activity_service.xml  fragment_config.xml  fragment_inventory.xml  fragment_inventory_tag.xml  fragment_kill.xml  fragment_lock.xml  fragment_read.xml  fragment_write.xml  rv_item.xml  select.xml
uhfDemo/src/main/res/menu/: main.xml
uhfDemo/src/main/res/raw/: rfid.xlsx
uhfDemo/src/main/res/values/: colors.xml  dimens.xml  strings.xml
uhfDemo/src/main/res/values-en/: dimens.xml  strings.xml
(+40 files in other folders)
